--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 /apps/MotorsportTracker/Frontend/build
 /apps/MotorsportTracker/Frontend/node_modules
 /apps/MotorsportTracker/Frontend/.next
+/.nvm
 ###< Frontend ###
 
 ###> phpunit/phpunit ###
