--- a/apps/MotorsportTracker/Frontend/.env.production
+++ b/apps/MotorsportTracker/Frontend/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://api.motorsporttracker.pierrelouislegrand.com
+NEXT_PUBLIC_API_URL=https://api.motorsportanalytics.com
 BUILD_FROM_YEAR=2020
