Hotfix: Add missing NEXT_PUBLIC prefix to env var

--- a/apps/MotorsportTracker/Frontend/.env
+++ b/apps/MotorsportTracker/Frontend/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_URL=http://backend:8000
-BUILD_FROM_YEAR=2018
+NEXT_PUBLIC_BUILD_FROM_YEAR=2018
 
 NEXT_PUBLIC_REVALIDATION_TOKEN=dev
