--- a/apps/MotorsportTracker/Frontend/.env.production
+++ b/apps/MotorsportTracker/Frontend/.env.production
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_URL=https://api.motorsportanalytics.com
-BUILD_FROM_YEAR=2020
+NEXT_PUBLIC_BUILD_FROM_YEAR=2020
 
 NEXT_PUBLIC_REVALIDATION_TOKEN=production
