--- a/behat-config.yml
+++ b/behat-config.yml
@@ -7,28 +7,28 @@ default:
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportETL\Season\ScrapSeasonsContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportETL\Shared\SharedContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportETL\Calendar\ScrapCalendarContext
-    api_tests:
-      paths: [ features ]
-      contexts:
-        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\Persistence\FixtureContext
-        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Results\ViewResultsContext
-        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportTracker\Championship\SeasonContext
-        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Calendar\ViewCalendarEventsContext
-        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Event\ViewSeasonEventsContext
-        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Schedule\ViewSeasonScheduleContext
-      filters:
-        tags: '@api'
-    backoffice_tests:
-      paths: [ features ]
-      contexts:
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Event\SeasonEventsContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Result\ComputeResultContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\CreateChampionshipPresentationContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\SeasonContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Event\EventSessionContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Event\EventContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Result\ClassificationContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Team\TeamContext
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\Shared\FixturesContext
-      filters:
-        tags: '@backoffice'
+#    api_tests:
+#      paths: [ features ]
+#      contexts:
+#        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\Persistence\FixtureContext
+#        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Results\ViewResultsContext
+#        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportTracker\Championship\SeasonContext
+#        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Calendar\ViewCalendarEventsContext
+#        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Event\ViewSeasonEventsContext
+#        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportCache\Schedule\ViewSeasonScheduleContext
+#      filters:
+#        tags: '@api'
+#    backoffice_tests:
+#      paths: [ features ]
+#      contexts:
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Event\SeasonEventsContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Result\ComputeResultContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\CreateChampionshipPresentationContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\SeasonContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Event\EventSessionContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Event\EventContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Result\ClassificationContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Team\TeamContext
+#        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\Shared\FixturesContext
+#      filters:
+#        tags: '@backoffice'
