Feature: Test the update of driver analytics

--- a/behat-config.yml
+++ b/behat-config.yml
@@ -3,10 +3,12 @@ default:
     use_case_tests:
       paths: [ features ]
       contexts:
+        - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportCache\Analytics\AnalyticsContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportETL\Series\ScrapSeriesListContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportETL\Season\ScrapSeasonsContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportETL\Shared\SharedContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportETL\Calendar\ScrapCalendarContext
+        - Kishlin\Tests\Backend\UseCaseTests\Context\FixturesContext
 #    api_tests:
 #      paths: [ features ]
 #      contexts:
