--- a/apps/MotorsportTracker/Backend/config/services.yaml
+++ b/apps/MotorsportTracker/Backend/config/services.yaml
@@ -107,7 +107,7 @@ services:
   ##> Cache
 
   Kishlin\Backend\Shared\Domain\Cache\CachePersister:
-    class: Kishlin\Backend\Shared\Infrastructure\Cache\CachePersisterImpl
+    class: Kishlin\Backend\Shared\Infrastructure\Cache\CachePersisterUsingPool
 
   ##> Monitoring
 
