Feature: Request series scrapping through a background job

--- a/.env
+++ b/.env
@@ -19,6 +19,10 @@ FRONTEND_SERVER_PORT_EXTERNAL=3000
 MEMCACHED_VERSION=1.6
 MEMCACHED_PORT_EXTERNAL=11211
 
+#SQS
+SQS_VERSION=1.2.0
+SQS_PORT_EXTERNAL=9324
+
 # Composer Config
 COMPOSER_HOME=/srv/cache/composer
 COMPOSER_CACHE_DIR=/srv/cache/composer
@@ -27,9 +31,11 @@ COMPOSER_CACHE_DIR=/srv/cache/composer
 DB_CORE_DEV=core-dev
 DB_CACHE_DEV=cache-dev
 DB_CLIENT_DEV=client-dev
+DB_ADMIN_DEV=admin-dev
 DB_CORE_TEST=core-test
 DB_CACHE_TEST=cache-test
 DB_CLIENT_TEST=client-test
+DB_ADMIN_TEST=admin-test
 DB_USER=motorsporttracker
 DB_PASSWORD=motorsporttracker
 DB_VERSION=14.6
