--- a/.env.dev
+++ b/.env.dev
@@ -27,6 +27,11 @@ DB_CLIENT_HOST=${DB_HOST}
 DB_CLIENT_PORT=${DB_PORT}
 DB_CLIENT_USER=${DB_USER}
 DB_CLIENT_PASSWORD=${DB_PASSWORD}
+DB_ADMIN_NAME=${DB_ADMIN_DEV}
+DB_ADMIN_HOST=${DB_HOST}
+DB_ADMIN_PORT=${DB_PORT}
+DB_ADMIN_USER=${DB_USER}
+DB_ADMIN_PASSWORD=${DB_PASSWORD}
 ###< DB Config ###
 
 ###> Memcached ###
@@ -35,10 +40,7 @@ MEMCACHED_NAMESPACE=motorsporttracker
 ###< Memcached ###
 
 ###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=sqs://sqs:9324/queue/default?sslmode=disable
 ###< symfony/messenger ###
 
 ###> nelmio/cors-bundle ###
