--- a/.env.test
+++ b/.env.test
@@ -26,6 +26,11 @@ DB_CLIENT_HOST=${DB_HOST}
 DB_CLIENT_PORT=${DB_PORT}
 DB_CLIENT_USER=${DB_USER}
 DB_CLIENT_PASSWORD=${DB_PASSWORD}
+DB_ADMIN_NAME=${DB_ADMIN_TEST}
+DB_ADMIN_HOST=${DB_HOST}
+DB_ADMIN_PORT=${DB_PORT}
+DB_ADMIN_USER=${DB_USER}
+DB_ADMIN_PASSWORD=${DB_PASSWORD}
 ###< DB Config ###
 
 ###> Memcached ###
