--- a/apps/Backoffice/config/routes/api.yaml
+++ b/apps/Backoffice/config/routes/api.yaml
@@ -1,3 +1,9 @@
+calendar:
+  resource: ../../src/MotorsportAdmin/Calendar/Controller/
+  prefix: /api/v1/calendar
+  type: annotation
+  stateless: true
+
 jobs:
   resource: ../../src/MotorsportAdmin/Jobs/Controller/
   prefix: /api/v1/jobs
