Hotfix: Configure the Task bus in Backend API

--- a/apps/MotorsportTracker/Backend/config/packages/framework.yaml
+++ b/apps/MotorsportTracker/Backend/config/packages/framework.yaml
@@ -14,6 +14,7 @@ framework:
       symfony.messenger.bus.command: ~
       symfony.messenger.bus.event: ~
       symfony.messenger.bus.query: ~
+      symfony.messenger.bus.task: ~
 
   cache:
     default_memcached_provider: 'memcached://%kishlin.memcached.dsn%'
