Feature: Scrap standings through the apis

--- a/apps/Backoffice/config/routes/api.yaml
+++ b/apps/Backoffice/config/routes/api.yaml
@@ -22,4 +22,10 @@ series:
   type: annotation
   stateless: true
 
+standings:
+  resource: ../../src/MotorsportAdmin/Standing/Controller/
+  prefix: /api/v1/standings
+  type: annotation
+  stateless: true
+
 
