Feature: Add some more details about events

--- a/apps/Backoffice/config/routes/api.yaml
+++ b/apps/Backoffice/config/routes/api.yaml
@@ -10,6 +10,12 @@ classification:
   type: annotation
   stateless: true
 
+events:
+  resource: ../../src/MotorsportAdmin/Events/Controller/
+  prefix: /api/v1/events
+  type: annotation
+  stateless: true
+
 jobs:
   resource: ../../src/MotorsportAdmin/Jobs/Controller/
   prefix: /api/v1/jobs
