Project: Update prod cors to the new namespace

--- a/.env.prod
+++ b/.env.prod
@@ -10,5 +10,5 @@ JWT_EXP_TOKEN="+10 minute"
 ###< JWT ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https://motorsporttracker.pierrelouislegrand.com$'
+CORS_ALLOW_ORIGIN='^https://(admin\.)?motorsportanalytics.com$'
 ###< nelmio/cors-bundle ###
