Feature: Setup invalidating front cache after a task

--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,11 @@ HOSTNAME='http://localhost:8000'
 WORKDIR='/app'
 ###< symfony/framework-bundle ###
 
+###> Frontend ###
+FRONTEND_HOST='http://frontend:3000'
+FRONTEND_SECRET=dev
+###< Frontend ###
+
 ###> JWT ###
 JWT_SECRET_KEY='@;wiiMge~SBY=.M,Kiw-B!6cf)kA[c'
 JWT_ALGORITHM='HS256'
