--- a/composer.json
+++ b/composer.json
@@ -22,21 +22,21 @@
         "firebase/php-jwt": "^6.0",
         "nelmio/cors-bundle": "^2.2",
         "ramsey/uuid": "^4.2",
-        "symfony/amazon-sqs-messenger": "6.0.*",
-        "symfony/asset": "6.0.*",
-        "symfony/console": "6.0.*",
-        "symfony/dotenv": "6.0.*",
-        "symfony/expression-language": "^6.0",
+        "symfony/amazon-sqs-messenger": "7.1.*",
+        "symfony/asset": "7.1.*",
+        "symfony/console": "7.1.*",
+        "symfony/dotenv": "7.1.*",
+        "symfony/expression-language": "7.1.*",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "6.0.*",
-        "symfony/messenger": "6.0.*",
-        "symfony/monolog-bundle": "^3.8",
-        "symfony/proxy-manager-bridge": "6.0.*",
+        "symfony/framework-bundle": "7.1.*",
+        "symfony/messenger": "7.1.*",
+        "symfony/monolog-bundle": "^3.10",
+        "symfony/proxy-manager-bridge": "6.4.*",
         "symfony/requirements-checker": "^2.0",
-        "symfony/runtime": "6.0.*",
-        "symfony/service-contracts": "^2.5",
-        "symfony/twig-bundle": "6.0.*",
-        "symfony/yaml": "6.0.*",
+        "symfony/runtime": "7.1.*",
+        "symfony/service-contracts": "3.5.*",
+        "symfony/twig-bundle": "7.1.*",
+        "symfony/yaml": "7.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^3.3"
     },
@@ -83,21 +83,23 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.0.*",
+            "require": "7.1.*",
             "docker": false
         }
     },
     "require-dev": {
-      "behat/behat": "^3.10",
+        "behat/behat": "^3.10",
         "friendsofphp/php-cs-fixer": "^3.5",
         "phpstan/phpstan": "^1.4",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpstan/phpstan-symfony": "^1.1",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "6.0.*",
-        "symfony/css-selector": "6.0.*",
-        "symfony/stopwatch": "6.0.*"
+        "roave/security-advisories": "dev-latest",
+        "symfony/browser-kit": "7.1.*",
+        "symfony/css-selector": "7.1.*",
+        "symfony/phpunit-bridge": "^7.1",
+        "symfony/stopwatch": "7.1.*"
     },
     "scripts": {
         "auto-scripts": {
