Feature: First implementations of intents Publisher and Processor

--- a/.env
+++ b/.env
@@ -1,7 +1,25 @@
 PROJECT=motorsport
 
-#restart policies [no, always, on-failure]
-RESTART_POLICIES=on-failure
+# SQS Config
+SQS_VERSION=1.6.12
+SQS_PORT=9324
+SQS_PORT_EXTERNAL=9324
+SQS_UI_PORT=9325
+SQS_UI_PORT_EXTERNAL=9325
+
+# Postgres Config
+POSTGRES_VERSION=16.9
+POSTGRES_PORT=5432
+POSTGRES_PORT_EXTERNAL=6379
+POSTGRES_USER=motorsporttracker
+POSTGRES_PASSWORD=motorsporttracker
+
+# Client Cache
+DB_CLIENT_CACHE=client-cache
+
+# Golang
+GOLANG_VERSION=1.24
+
 
 # PHP Config
 PHP_VERSION=8.3-fpm
@@ -19,10 +37,6 @@ FRONTEND_SERVER_PORT_EXTERNAL=3030
 # Memcached
 MEMCACHED_VERSION=1.6
 MEMCACHED_PORT_EXTERNAL=11211
-
-#SQS
-SQS_VERSION=1.2.0
-SQS_PORT_EXTERNAL=9324
 
 # Composer Config
 COMPOSER_HOME=/srv/cache/composer
