Feature: Better env and queues management

--- a/.env
+++ b/.env
@@ -19,6 +19,13 @@ DB_CLIENT_CACHE=client-cache
 
 # Golang
 GOLANG_VERSION=1.24
+QUEUE_TYPE=sqs
+SQS_ENDPOINT=http://sqs:9324
+SQS_REGION=elasticmq
+SQS_ACCESS_KEY=x
+SQS_SECRET_KEY=x
+SQS_SESSION_TOKEN=
+QUEUE_SCRAPPING_INTENTS=ScrappingIntents
 
 
 # PHP Config
