Feature: Actually scrap series and store them

--- a/.env
+++ b/.env
@@ -10,12 +10,17 @@ SQS_UI_PORT_EXTERNAL=9325
 # Postgres Config
 POSTGRES_VERSION=16.9
 POSTGRES_PORT=5432
-POSTGRES_PORT_EXTERNAL=6379
 POSTGRES_USER=motorsporttracker
 POSTGRES_PASSWORD=motorsporttracker
 
-# Client Cache
-DB_CLIENT_CACHE=client-cache
+# Postgres Client Cache
+POSTGRES_CLIENT_CACHE_NAME=client-cache
+POSTGRES_CLIENT_CACHE_EXTERNAL_PORT=6379
+
+# Postgres Core
+POSTGRES_CORE_NAME=core
+POSTGRES_CORE_EXTERNAL_PORT=6378
+POSTGRES_CORE_URL=postgres://motorsporttracker:motorsporttracker@postgres-core:5432/core?sslmode=disable
 
 # Golang
 GOLANG_VERSION=1.24
@@ -50,19 +55,20 @@ COMPOSER_HOME=/srv/cache/composer
 COMPOSER_CACHE_DIR=/srv/cache/composer
 
 # DB Config
-DB_CORE_DEV=core-dev
-DB_CACHE_DEV=cache-dev
-DB_CLIENT_DEV=client-dev
-DB_ADMIN_DEV=admin-dev
-DB_CORE_TEST=core-test
-DB_CACHE_TEST=cache-test
-DB_CLIENT_TEST=client-test
-DB_ADMIN_TEST=admin-test
-DB_USER=motorsporttracker
-DB_PASSWORD=motorsporttracker
-DB_VERSION=14.6
-DB_DRIVER=pdo_pgsql
-DB_HOST=postgres
-DB_PORT=5432
-DB_PORT_EXTERNAL=6379
-DB_NAME=${DB_CORE_DEV}
+
+#DB_CORE_DEV=core-dev
+#DB_CACHE_DEV=cache-dev
+#DB_CLIENT_DEV=client-dev
+#DB_ADMIN_DEV=admin-dev
+#DB_CORE_TEST=core-test
+#DB_CACHE_TEST=cache-test
+#DB_CLIENT_TEST=client-test
+#DB_ADMIN_TEST=admin-test
+#DB_USER=motorsporttracker
+#DB_PASSWORD=motorsporttracker
+#DB_VERSION=14.6
+#DB_DRIVER=pdo_pgsql
+#DB_HOST=postgres
+#DB_PORT=5432
+#DB_PORT_EXTERNAL=6379
+#DB_NAME=${DB_CORE_DEV}
